--- a/GUI/GUI/Properties/Resources.resx
+++ b/GUI/GUI/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="4124820-document-encryption-file-access-file-security-protected-file_113909" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\4124820-document-encryption-file-access-file-security-protected-file_113909.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="iconfinder-securityprotectlockshield04-4021479_1131371" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconfinder-securityprotectlockshield04-4021479_1131371.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -144,5 +147,8 @@
   </data>
   <data name="About_icon-icons.com_55974" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\About_icon-icons.com_55974.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="128_crypto" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\128_crypto.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
